# snodo

./: .gitignore  .importlinter  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.worker  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
.opencode/: openwork.json
.snodo.manual-bak/: protocol.yml  state.json  wave.json
.wrangler/cache/: pages.json  wrangler-account.json
docker/: Dockerfile.opencode
docs/: architecture.md  extending.md  index.md  protocol.md  runbook.md
docs/decisions/: 001-pyjwt-over-custom-hmac.md  002-warn-withholds-approval.md  003-escalate-halt-resolve-resume.md  004-constraint-predicate-framework.md  005-protocol-adherence-validator.md  006-severity-cap.md  007-coder-adapter-provider-pattern.md  008-file-backed-session-checkpoint.md  009-fastmcp-over-custom-transport.md  010-gitpython-over-subprocess.md  011-typer-over-argparse.md  013-kleene-closure-auto-fix-recovery.md  README.md
docs/research/: README.md  pre-registration.md
docs/specs/: authorize-list-pending.md  bounded-job-logs-read.md  cache-optimization.md  cf-models-prefix-fix.md  cf-openai-endpoint.md  cli-verbose-flag.md  cloud-sync-all.md  cloud-sync.md  cloudflare-provider.md  coder-read-before-write.md  coder-structured-output.md  coding-model-dispatch.md  dashboard.md  decision-record-mechanism.md  deepseek-prefix.md  fix-adjudication-carry-forward.md  fix-classifier-live-call-in-mock-test.md  fix-cli-error-handling.md  fix-cloud-sync-httpx.md  fix-cloud-sync-logging.md  fix-job-persistence.md  fix-langchain-pydantic-warning.md  fix-meta-capture.md  fix-mock-integration-test.md  fix-same-task-job-dispatch.md  fix-usage-jobid.md  fix-validator-model-resolution.md  fix-wave-classifier-fragmentation.md  fix-wave-classifier-live-call.md  fix-wave-classifier-model-config.md  fix-wave-summarization.md  fix-worktree-cmd.md  git-worktrees.md  llm-config-section.md  mcp-event-loop-offload.md  mcp-self-description.md  models-dev-pricing.md  models-filter-discrete-flags.md  monorepo-git.md  parallel-validators.md  (+55 more)
experiments/: config.py  config.yml  run_exp1.py  scoring.py  select_tasks.py  workspace.py
experiments/arms/: arm_a_opencode.py  arm_b_prose.py  arm_c_snodo.py  prose.py
experiments/tasks/: experiment_config.yml  pool_stats.txt  selection.csv  selection.jsonl
snodo/: __init__.py  __main__.py  paths.py  prompt_cmd.py
snodo/agents/: adapter.py
snodo/cli/: config.py  main.py
snodo/coders/: __init__.py  anthropic_adapter.py  base.py  litellm.py  openai_adapter.py  opencode_adapter.py  opencode_container.py
snodo/compiler/: models.py  protocol.yml  verifier.py
snodo/core/: interfaces.py
snodo/dashboard/: __init__.py  app.py  providers.py  screens.py
snodo/engine/: constraints.py  loop.py  policy.py  validators.py
snodo/infrastructure/: audit.py  cloud_sync.py  config.py  decisions.py  jwks.py  memory.py  model_catalog.py  model_discovery.py  oauth_verifier.py  paths.py  session.py  signing_keys.py  state.py  tokens.py  usage_tracker.py  wave_registry.py  worktree.py
snodo/jobs/: __init__.py  runner.py  wrapper.py
snodo/mcp/: decision_handlers.py  git.py  installer.py  job_handlers.py  model_handlers.py  planner.py  recon_handlers.py  server.py  shell.py  tools.py  transport.py  workspace.py
snodo/predicates/: base.py  registry.py  scope.py
snodo/protocols/: __init__.py
snodo/providers/: base.py  github.py  local.py
snodo/recon/: __init__.py
snodo/sandbox/: docker_sandbox.py  local_sandbox.py
snodo/validators/: __init__.py  context.py  llm_validator.py  protocol_adherence.py  quality.py
studies/: README.md  conventions.md  hypothesis_findings.md  requirements.txt  run_all.py
studies/_common/: __init__.py  io.py  plotting.py  seeds.py
studies/_smoke/: notebook.py
studies/byzantine_robustness/: notebook.py
studies/detection_probability/: notebook.py
studies/overhead_benchmarks/: notebook.py
studies/policy_monte_carlo/: notebook.py
tests/: conftest.py  strategies.py
tests/agents/: test_adapter.py
tests/cli/: test_adjudicate_cmd.py  test_agent_cmd.py  test_authorize_cmd.py  test_cloud.py  test_config.py  test_job_cmd.py  test_logs_cmd.py  test_main.py  test_prompt.py  test_run_cmd.py  test_session_cmd.py
tests/coders/: test_coders.py  test_opencode_adapter.py  test_opencode_cli_adapter.py  test_provider_adapters.py  test_tool_loop_fail_loud.py
tests/compiler/: test_models.py  test_verifier.py
tests/core/: test_project.py
tests/dashboard/: test_dashboard.py
tests/e2e/: conftest.py  test_2plus_n_journey.py  test_behavioral_gaps.py  test_cli_basics.py  test_command_registry.py  test_config_commands.py  test_escalate_resolution.py  test_init_project_id.py  test_protocol_validation.py  test_session_lifecycle.py  test_solo_journey.py  test_team_journey.py
tests/engine/: test_coder_respawn.py  test_constraints.py  test_context_coverage.py  test_default_executor.py  test_integration.py  test_loop.py  test_loop_decomposed.py  test_loop_governance.py  test_loop_validation.py  test_policy.py  test_post_validate_recovery.py  test_state_coverage.py  test_validator_model_override.py  test_validator_severity.py  test_writeback_coverage.py
tests/experiments/: swe_verified_fixture.jsonl  test_config.py  test_run_exp1.py  test_select.py
tests/golden/: conftest.py  test_template_snapshots.py  test_template_wellformedness.py  test_tool_registry_snapshot.py
tests/infrastructure/: test_audit.py  test_config.py  test_decisions.py  test_jwks.py  test_memory.py  test_model_discovery.py  test_paths.py  (+5 more)
(+94 files in other folders)
