[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
snodo-core = { workspace = true }
snodo-tools = { workspace = true }
snodo-foundation = { workspace = true }
snodo-engine = { workspace = true }
snodo-mcp = { workspace = true }

[project]
name = "snodo"
version = "0.5.4"
dependencies = [
    "snodo-core==0.5.4",
    "snodo-tools==0.5.4",
    "snodo-foundation==0.5.4",
    "snodo-engine==0.5.4",
    "snodo-mcp==0.5.4",
    "pydantic>=2.12.0",
    "pyyaml>=6.0",
    "typer>=0.9.0",
    "textual>=1.0.0",
    "httpx>=0.27.0",
    "GitPython>=3.1.0",
    "litellm>=1.80.0",
]

description = "AI-native Software Development Lifecycle protocol engine"
requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "The Snodo Authors", email = "noreply@snodo.dev" }]
keywords = ["ai", "sdlc", "agents", "protocol", "governance", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://snodo.dev"
Repository = "https://github.com/snodo-dev/snodo"
Issues = "https://github.com/snodo-dev/snodo/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.3.0",
    "hypothesis>=6.100.0",
    "ruff>=0.1.0",
    "radon>=6.0.0",
    "import-linter",
]
studies = [
    "marimo>=0.9.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
]

[project.scripts]
snodo = "snodo.cli.main:main"
snop = "snodo.cli.commands.dashboard_cmd:snop_entry"
snodo-prompt = "snodo.prompt_cmd:main"

[tool.setuptools.packages.find]
include = ["snodo*"]

[tool.setuptools.package-data]
snodo = ["py.typed"]

[tool.pytest.ini_options]
# Default local run skips e2e for speed (~47s vs ~149s).
# Run the full suite:  pytest -m ""
# Run only e2e:       pytest -m e2e
# CI always runs the full suite regardless of addopts.
addopts = "-m 'not e2e'"
markers = [
    "e2e: end-to-end tests using subprocess invocation of the snodo CLI",
    "slow: tests that take more than a second to complete",
    "property: hypothesis property-based tests",
    "timeout: test execution timeout",
]
filterwarnings = [
    "ignore::UserWarning:langchain_core.utils.pydantic",
]

[dependency-groups]
dev = [
    "datasets>=5.0.0",
    "genbadge[coverage]>=1.1.3",
    "httpx2>=2.4.0",
    "hypothesis>=6.155.2",
    "import-linter>=2.12",
    "pytest-xdist>=3.8.0",
    "radon>=6.0.1",
    "swebench>=4.0.0",
    "paramiko>=3.0.0",
]

[tool.coverage.run]
source_pkgs = ["snodo"]
branch = true
relative_files = true
parallel = true
omit = ["*/tests/*", "*/__main__.py", "*/site-packages/*"]

[tool.coverage.paths]
snodo = ["snodo/", "packages/*/src/snodo/"]
